Update info [Tanakorn.song]

--- a/about.html
+++ b/about.html
@@ -39,9 +39,9 @@
     <h1>Meet the Team</h1>
 
     <article class="bio-box">
-        <h3>[Student A Name Surname (EN)]</h3>
-        <p><strong>Student ID:</strong> [XXXXXXXX]</p>
-        <p><strong>About Me:</strong> [เขียนแนะนำตัวเองสั้นๆ ตรงนี้...]</p>
+        <h3>[Tanakorn Songpaisan]</h3>
+        <p><strong>Student ID:</strong> [1660705821]</p>
+        <p><strong>About Me:</strong> [นักศึกษาปี3 คณะเทคโนโลยีสารสนเทศและนวัตกรรม มหาวิทยาลัยกรุงเทพ]</p>
     </article>
 
     <article class="bio-box">
