--- a/portfolio.html
+++ b/portfolio.html
@@ -39,9 +39,9 @@
     <h1>Our Works</h1>
 
     <div class="project-card">
-        <h3>Project by [Student A Name] (ID: XXX)</h3>
-        <p>Project Name: [ชื่อโปรเจกต์ที่เคยทำ]</p>
-        <p>Description: [บรรยายสั้นๆ เกี่ยวกับผลงาน]</p>
+        <h3>Project by [Tanakorn Songpaisan] (ID: 1660705821)</h3>
+        <p>Project Name: [ระบบจัดการคลังยา]</p>
+        <p>Description: [ระบบคัดแยกการสั่งซื้อสินค้าในคลังยาสำหรับตรวจสอบคำสั่งซื้อและสถานะการสั่งยา]</p>
     </div>
 
     <div class="project-card">
