--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section class="member-list">
         <h2>Team Members</h2>
         <ul>
-            <li>Leader: [Name Surname (EN)] - ID: [XXXXXXXX]</li>
+            <li>Leader: [Tanakorn Songpaisan] - ID: [1660705821]</li>
 
             <li>Developer: [Name Surname (EN)] - ID: [XXXXXXXX]</li>
 
