Update info [Wattikorn.khwa]

--- a/about.html
+++ b/about.html
@@ -45,9 +45,9 @@
     </article>
 
     <article class="bio-box">
-        <h3>[Student B Name Surname (EN)]</h3>
-        <p><strong>Student ID:</strong> [XXXXXXXX]</p>
-        <p><strong>About Me:</strong> [เขียนแนะนำตัวเองสั้นๆ ตรงนี้...]</p>
+        <h3>[Wattikorn Khwandeang]</h3>
+        <p><strong>Student ID:</strong> [1660704345]</p>
+        <p><strong>About Me:</strong> [นักศึกษาอยู่ปี 3 ในมหาลัยกรุงเทพ คณะเทคโนโลยีสารสนเทศและนวัตกรรม]</p>
     </article>
 
     <article class="bio-box">
