--- a/portfolio.html
+++ b/portfolio.html
@@ -45,9 +45,9 @@
     </div>
 
     <div class="project-card">
-        <h3>Project by [Student B Name] (ID: XXX)</h3>
-        <p>Project Name: [ชื่อโปรเจกต์ที่เคยทำ]</p>
-        <p>Description: [บรรยายสั้นๆ เกี่ยวกับผลงาน]</p>
+        <h3>Project by [Wattikorn Khwandeang] (ID: 1660704345)</h3>
+        <p>Project Name: [Bu Smart Parking]</p>
+        <p>Description: [จัดทำที่จอดรถ เพื่อให้ผู้ใช้สะดวกประหยัดเวลา หาที่จอดรถ]</p>
     </div>
 
     <div class="project-card">
