--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <ul>
             <li>Leader: [Name Surname (EN)] - ID: [XXXXXXXX]</li>
 
-            <li>Developer: [Name Surname (EN)] - ID: [XXXXXXXX]</li>
+            <li>Developer: [Wattikorn Khwandeang] - ID: [1660704345]</li>
 
             <li>Designer: [Name Surname (EN)] - ID: [XXXXXXXX]</li>
         </ul>
