Update info [Mintada.anek]

--- a/about.html
+++ b/about.html
@@ -51,9 +51,9 @@
     </article>
 
     <article class="bio-box">
-        <h3>[Student C Name Surname (EN)]</h3>
-        <p><strong>Student ID:</strong> [XXXXXXXX]</p>
-        <p><strong>About Me:</strong> [เขียนแนะนำตัวเองสั้นๆ ตรงนี้...]</p>
+        <h3>[Mintada Aneklap]</h3>
+        <p><strong>Student ID:</strong> [1660700202]</p>
+        <p><strong>About Me:</strong> [นักศึกษาปีที่3 สาขา IT มหาลัยกรุงเทพ]</p>
     </article>
 
 </body>
