--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
             <li>Developer: [Name Surname (EN)] - ID: [XXXXXXXX]</li>
 
-            <li>Designer: [Name Surname (EN)] - ID: [XXXXXXXX]</li>
+            <li>Designer: [Mintada Aneklap] - ID: [1660700202]</li>
         </ul>
     </section>
 
