--- a/portfolio.html
+++ b/portfolio.html
@@ -51,9 +51,9 @@
     </div>
 
     <div class="project-card">
-        <h3>Project by [Student C Name] (ID: XXX)</h3>
-        <p>Project Name: [ชื่อโปรเจกต์ที่เคยทำ]</p>
-        <p>Description: [บรรยายสั้นๆ เกี่ยวกับผลงาน]</p>
+        <h3>Project by [Mintada Aneklap] (ID: 1660700202)</h3>
+        <p>Project Name: [Intelligence bin]</p>
+        <p>Description: [ใช้ Ultrasonic Sensor วัดระยะห่างระหว่างขยะกับฝาถัง ตรวจจับได้ว่าขยะอยู่ในระดับใด (ว่าง, เกือบเต็ม, เต็ม)]</p>
     </div>
 
 </body>
